--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-# REACT_APP_API_URL = "http://localhost:5000"
-VITE_API_BASE_URL = "http://localhost:5000"
+#   VITE_API_BASE_URL=5000
+#    VITE_NODE_ENV=production
+VITE_API_BASE_URL="http://localhost:5000"
